# protobot

.devcontainer/: Dockerfile  devcontainer.json  entrypoint.sh
protobot_bringup/: CMakeLists.txt  package.xml
protobot_bringup/launch/: protobot_no_moveit.launch.py  real_protobot.launch.py  simulated_protobot.launch.py
protobot_controller/: CMakeLists.txt  package.xml
protobot_controller/config/: controllers.yaml
protobot_controller/launch/: controller.launch.py
protobot_controller/src/: protobot_interface.cpp
protobot_description/: CMakeLists.txt  package.xml
protobot_description/gz_config/: cybertruck.config  garage.config  gz_bridge.yaml
protobot_description/launch/: gz.launch.py  rviz.launch.py  test.launch.py
protobot_description/meshes/: base_gz0.01.STL  mountPost_gz0.01.STL  rod0End_gz0.01.STL  rod1End_gz0.01.STL  servoMotor_gz0.01.STL  webcam_gz0.01.STL
protobot_description/rviz/: display.rviz
protobot_description/urdf/: controls.xacro  gazebo.xacro  (+3 more)
protobot_interfaces/: CMakeLists.txt  package.xml
protobot_kinematics/: CMakeLists.txt  package.xml
protobot_kinematics/protobot_kinematics/: coord_to_joint_angles.py  inverse_kinematics.py  send_joint_angles.py
protobot_moveit/: CMakeLists.txt  package.xml
protobot_moveit/config/: initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  protobot.srdf
protobot_moveit/launch/: moveit.launch.py
protobot_moveit/src/: simple_moveit_interface.cpp
protobot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
protobot_remote/: CMakeLists.txt  package.xml
(+28 files in other folders)
